--- a/online-help-96-97/reference_effective_data_ontap_disk_types.adoc
+++ b/online-help-96-97/reference_effective_data_ontap_disk_types.adoc
@@ -4,12 +4,12 @@ sidebar: sidebar
 keywords: ontap, disk, type, online, help
 summary: "Beginning with Data ONTAP 8.1, certain ONTAP disk types are considered equivalent for the purposes of creating and adding to aggregates, and managing spares. ONTAP assigns an effective disk type for each disk type. You can mix HDDs that have the same effective disk type."
 ---
-= How you can use effective ONTAP disk type for mixing HDDs
+= Use effective ONTAP disk type for mixing HDDs with System Manger - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
 [.lead]
-Beginning with Data ONTAP 8.1, certain ONTAP disk types are considered equivalent for the purposes of creating and adding to aggregates, and managing spares. ONTAP assigns an effective disk type for each disk type. You can mix HDDs that have the same effective disk type.
+Beginning with Data ONTAP 8.1, certain ONTAP disk types are considered equivalent for the purposes of creating and adding to aggregates, and managing spares. ONTAP assigns an effective disk type for each disk type. You can use ONTAP System Manager classic (available in 9.7 and earlier) to mix HDDs that have the same effective disk type.
 
 When the `raid.disktype.enable` option is set to `off`, you can mix certain types of HDDs within the same aggregate. When the `raid.disktype.enable` option is set to `on`, the effective disk type is the same as the ONTAP disk type. Aggregates can be created using only one disk type. The default value for the `raid.disktype.enable` option is `off`.
 
