--- a/online-help-96-97/concept_array_luns.adoc
+++ b/online-help-96-97/concept_array_luns.adoc
@@ -4,12 +4,12 @@ sidebar: sidebar
 keywords: system, manager, array, lun, aggregate, assign, online, help, classic
 summary: "You can use System Manager to assign array LUNs to an existing aggregate and manage array LUNs."
 ---
-= Array LUNs
+= Manage array LUNs with System Manager - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
 [.lead]
-You can use System Manager to assign array LUNs to an existing aggregate and manage array LUNs.
+You can use ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to assign array LUNs to an existing aggregate and manage array LUNs.
 
 == Assign array LUNs
 
