--- a/online-help-96-97/concept_disks.adoc
+++ b/online-help-96-97/concept_disks.adoc
@@ -4,12 +4,12 @@ sidebar: sidebar
 keywords: system, manager, disk, manage, online, help
 summary: "You can use System Manager to manage disks."
 ---
-= Disks
+= Manage disks with System Manager - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
 [.lead]
-You can use System Manager to manage disks.
+You can use ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to manage disks.
 
 *Related information*
 
