--- a/online-help-96-97/concept_fc_fcoe_nvme_adapters.adoc
+++ b/online-help-96-97/concept_fc_fcoe_nvme_adapters.adoc
@@ -4,12 +4,12 @@ sidebar: sidebar
 keywords: system, manager, manage, fc, fcoe, nvme, adapter, online, help, edit, adapter, speed, settings
 summary: 'You can use System Manager to manage FC/FCoE and NVMe adapters.'
 ---
-= FC/FCoE and NVMe adapters
+= Manage FC/FCoE and NVMe adapters with System Manager - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
 [.lead]
-You can use System Manager to manage FC/FCoE and NVMe adapters.
+You can use ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to manage FC/FCoE and NVMe adapters.
 
 == Edit the FC/FCoE and NVMe adapter speed settings
 
