--- a/online-help-96-97/concept_how_ontap_reports_drive_types.adoc
+++ b/online-help-96-97/concept_how_ontap_reports_drive_types.adoc
@@ -4,12 +4,12 @@ sidebar: sidebar
 keywords: ontap, report, disk, type, industry, standards, sas, fc, storage, array, online, help
 summary: "ONTAP associates a type with every disk. ONTAP reports some disk types differently than the industry standards; you should understand how ONTAP disk types map to industry standards to avoid confusion."
 ---
-= How ONTAP reports disk types
+= How ONTAP reports disk types in System Manager - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
 [.lead]
-ONTAP associates a type with every disk. ONTAP reports some disk types differently than the industry standards; you should understand how ONTAP disk types map to industry standards to avoid confusion.
+ONTAP System Manager classic (available in ONTAP 9.7 and earlier) associates a type with every disk. ONTAP reports some disk types differently than the industry standards; you should understand how ONTAP disk types map to industry standards to avoid confusion.
 
 When ONTAP documentation refers to a disk type, it is the type used by ONTAP unless otherwise specified. _RAID disk types_ denote the role that a specific disk plays for RAID. RAID disk types are not related to ONTAP disk types.
 
