--- a/online-help-96-97/concept_how_system_manager_calculates_hot_spares.adoc
+++ b/online-help-96-97/concept_how_system_manager_calculates_hot_spares.adoc
@@ -4,12 +4,12 @@ sidebar: sidebar
 keywords: system, manager, hot, spares, disk, storage, raid, online, help
 summary: "A hot spare is a disk that is assigned to a storage system but not used by any RAID group. Hot spares do not contain any data and are assigned to a RAID group when a disk failure occurs in the RAID group. System Manager uses the largest disk as the hot spare."
 ---
-= How System Manager works with hot spares
+= How System Manager works with hot spares - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
 [.lead]
-A hot spare is a disk that is assigned to a storage system but not used by any RAID group. Hot spares do not contain any data and are assigned to a RAID group when a disk failure occurs in the RAID group. System Manager uses the largest disk as the hot spare.
+A hot spare is a disk that is assigned to a storage system but not used by any RAID group. Hot spares do not contain any data and are assigned to a RAID group when a disk failure occurs in the RAID group. ONTAP System Manager classic (available in ONTAP 9.7 and earlier) uses the largest disk as the hot spare.
 
 When there are different disk types in the RAID group, the largest-sized disk of each disk type is left as the hot spare. For example, if there are 10 SATA disks and 10 SAS disks in the RAID group, the largest-sized SATA disk and the largest-sized SAS disk are serve as hot spares.
 
