--- a/online-help-96-97/concept_nodes.adoc
+++ b/online-help-96-97/concept_nodes.adoc
@@ -4,10 +4,10 @@ sidebar: sidebar
 keywords: node, system, manager, view, detail, cluster, online, help
 summary: "You can use System Manager to view the details of the nodes in the cluster."
 ---
-= Nodes
+= Manage nodes with System Manager - ONTAP 9.7 and earlier
 
 [.lead]
-You can use System Manager to view the details of the nodes in the cluster.
+You can use ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to view the details of the nodes in the cluster.
 
 == Initialize the ComplianceClock time
 
