--- a/online-help-96-97/concept_subnets.adoc
+++ b/online-help-96-97/concept_subnets.adoc
@@ -4,12 +4,12 @@ sidebar: sidebar
 keywords: system, manager, manage, subnet, online, help, edit, settings, modify, delete, ip, address
 summary: "You can use System Manager to manage subnets."
 ---
-= Subnets
+= Manage subnets with System Manager - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
 [.lead]
-You can use System Manager to manage subnets.
+You can use ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to manage subnets.
 
 == Edit subnet settings
 
