--- a/online-help-96-97/task_adding_capacity_disks.adoc
+++ b/online-help-96-97/task_adding_capacity_disks.adoc
@@ -4,13 +4,13 @@ sidebar: sidebar
 keywords: add, capacity, disk, online, help, aggregate
 summary: "You can increase the size of an existing non-root aggregate or a root aggregate containing disks by adding capacity disks. You can use System Manager to add HDDs or SSDs of the selected ONTAP disk type and to modify the RAID group options."
 ---
-= Add capacity disks
+= Add capacity disks with System Manager - ONTAP 9.7 and earlier
 :experimental:
 :icons: font
 :imagesdir: ../media/
 
 [.lead]
-You can increase the size of an existing non-root aggregate or a root aggregate containing disks by adding capacity disks. You can use System Manager to add HDDs or SSDs of the selected ONTAP disk type and to modify the RAID group options.
+You can increase the size of an existing non-root aggregate or a root aggregate containing disks by adding capacity disks. You can use System Manager classic (available in ONTAP 9.7 and earlier) to add HDDs or SSDs of the selected ONTAP disk type and to modify the RAID group options.
 
 .Before you begin
 
