--- a/online-help-96-97/task_changing_raid_configuration_when_creating_aggregate.adoc
+++ b/online-help-96-97/task_changing_raid_configuration_when_creating_aggregate.adoc
@@ -4,12 +4,12 @@ sidebar: sidebar
 keywords: system, manager, raid, configuration, aggregate, online, help
 summary: "While creating an aggregate, you can modify the default values of the RAID type and RAID group size options of the aggregate by using System Manager."
 ---
-= Changing the RAID configuration when creating an aggregate
+= Change the RAID configuration when creating an aggregate with System Manager - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
 [.lead]
-While creating an aggregate, you can modify the default values of the RAID type and RAID group size options of the aggregate by using System Manager.
+While creating an aggregate, you can use ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to modify the default values of the RAID type and RAID group size options of the aggregate.
 
 .About this task
 
