--- a/online-help-96-97/task_configuring_managing_cloud_tiers.adoc
+++ b/online-help-96-97/task_configuring_managing_cloud_tiers.adoc
@@ -4,9 +4,9 @@ sidebar: sidebar
 keywords: configure, manage, cloud, tier, online, help, fabricpool, aggregate, storage, system, add, ssd, provision, storage, fabricpool, aggregate, manually, tiering, policy
 summary: "Storing data in tiers can enhance the efficiency of your storage system. You manage storage tiers by using FabricPool-enabled aggregates. Cloud tiers store data in a tier based on whether the data is frequently accessed."
 ---
-= Configure and manage cloud tiers
+= Configure and manage cloud tiers with System Manager classic - ONTAP 9.7 and earlier
 
-Storing data in tiers can enhance the efficiency of your storage system. You manage storage tiers by using FabricPool-enabled aggregates. Cloud tiers store data in a tier based on whether the data is frequently accessed.
+You can use ONTAP System Manger classic (available in ONTAP 9.7 and earlier) to configure and manage cloud tiers. Storing data in tiers can enhance the efficiency of your storage system. You manage storage tiers by using FabricPool-enabled aggregates. Cloud tiers store data in a tier based on whether the data is frequently accessed.
 
 .Before you begin
 
