--- a/online-help-96-97/task_deleting_aggregates.adoc
+++ b/online-help-96-97/task_deleting_aggregates.adoc
@@ -4,12 +4,12 @@ sidebar: sidebar
 keywords: delete, aggregates, system, manager, online, help, root
 summary: "You can use System Manager to delete aggregates when you no longer require the data in the aggregates. However, you cannot delete the root aggregate because it contains the root volume, which contains the system configuration information."
 ---
-= Deleting aggregates
+= Delete aggregates with System Manager - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
 [.lead]
-You can use System Manager to delete aggregates when you no longer require the data in the aggregates. However, you cannot delete the root aggregate because it contains the root volume, which contains the system configuration information.
+You can use ONTAP System Manager classic (avaiable in ONTAP 9.7 and earlier) to delete aggregates when you no longer require the data in the aggregates. However, you cannot delete the root aggregate because it contains the root volume, which contains the system configuration information.
 
 .Before you begin
 
