--- a/online-help-96-97/task_editing_aggregates.adoc
+++ b/online-help-96-97/task_editing_aggregates.adoc
@@ -4,12 +4,12 @@ sidebar: sidebar
 keywords: online, help, edit, aggregates, raid, type, group, size, online, help
 summary: "You can use System Manager to change the aggregate name, RAID type, and RAID group size of an existing aggregate when required."
 ---
-= Editing aggregates
+= Edit aggregates with System Manager - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
 [.lead]
-You can use System Manager to change the aggregate name, RAID type, and RAID group size of an existing aggregate when required.
+You can use ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to change the aggregate name, RAID type, and RAID group size of an existing aggregate when required.
 
 .Before you begin
 
