--- a/online-help-96-97/task_moving_flexvol_volumes.adoc
+++ b/online-help-96-97/task_moving_flexvol_volumes.adoc
@@ -4,13 +4,13 @@ sidebar: sidebar
 keywords: move, flexvol, volume, aggregate, system, manager, online, help
 summary: "You can nondisruptively move a FlexVol volume to a different aggregate or a different node for capacity utilization and improved performance by using System Manager."
 ---
-= Moving FlexVol volumes
+= Move FlexVol volumes with System Manager - ONTAP 9.7 and earlier
 :experimental:
 :icons: font
 :imagesdir: ../media/
 
 [.lead]
-You can nondisruptively move a FlexVol volume to a different aggregate or a different node for capacity utilization and improved performance by using System Manager.
+You can use ONTAP System Manager classic (avaiable in ONTAP 9.7 and earlier) to nondisruptively move a FlexVol volume to a different aggregate or a different node for capacity utilization and improved performance.
 
 .Before you begin
 
