--- a/online-help-96-97/task_provisioning_cache_by_adding_disks.adoc
+++ b/online-help-96-97/task_provisioning_cache_by_adding_disks.adoc
@@ -4,12 +4,12 @@ sidebar: sidebar
 keywords: ssd, system, manager, storage, pool, root, aggregate, provision, cache, online, help, ssd, disks, flash, pool
 summary: "You can use System Manager to add SSDs as either storage pools or dedicated SSDs to provision cache. By adding SSDs, you can convert a non-root aggregate or a root aggregate that does not contain partitioned disks to a Flash Pool aggregate, or increase the cache size of an existing Flash Pool aggregate."
 ---
-= Provisioning cache by adding SSDs
+= Provision cache by adding SSDs with System Manager - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
 [.lead]
-You can use System Manager to add SSDs as either storage pools or dedicated SSDs to provision cache. By adding SSDs, you can convert a non-root aggregate or a root aggregate that does not contain partitioned disks to a Flash Pool aggregate, or increase the cache size of an existing Flash Pool aggregate.
+You can use ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to add SSDs as either storage pools or dedicated SSDs to provision cache. By adding SSDs, you can convert a non-root aggregate or a root aggregate that does not contain partitioned disks to a Flash Pool aggregate, or increase the cache size of an existing Flash Pool aggregate.
 
 .About this task
 
