--- a/online-help-96-97/task_viewing_aggregate_information.adoc
+++ b/online-help-96-97/task_viewing_aggregate_information.adoc
@@ -4,12 +4,12 @@ sidebar: sidebar
 keywords: view, aggregate, information, online, help, system, manager
 summary: "You can use the Aggregates window in System Manager to view the name, status, and space information about an aggregate."
 ---
-= Viewing aggregate information
+= View aggregate information with System Manager - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
 [.lead]
-You can use the Aggregates window in System Manager to view the name, status, and space information about an aggregate.
+You can use the Aggregates window in ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to view the name, status, and space information about an aggregate.
 
 .Steps
 
