--- a/online-help-96-97/task_viewing_disk_information.adoc
+++ b/online-help-96-97/task_viewing_disk_information.adoc
@@ -4,12 +4,12 @@ sidebar: sidebar
 keywords: view, disk, information, system, manager, name, online, help
 summary: "You can use the Disks window in System Manager to view the name, size, and container details of disks along with graphical information about capacity disks and cache disks."
 ---
-= Viewing disk information
+= View disk information with System Manager - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
 [.lead]
-You can use the Disks window in System Manager to view the name, size, and container details of disks along with graphical information about capacity disks and cache disks.
+You can use the Disks window in ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to view the name, size, and container details of disks along with graphical information about capacity disks and cache disks.
 
 .Steps
 
