--- a/online-help-96-97/task_deleting_mirror_vault_relationships.adoc
+++ b/online-help-96-97/task_deleting_mirror_vault_relationships.adoc
@@ -4,12 +4,13 @@ sidebar: sidebar
 keywords: system, manager, mirror, vault, relationship, source, destination, delete, online, help
 summary: "You can use System Manager to end a mirror and vault relationship between a source and destination volume, and release the Snapshot copies from the source volume."
 ---
-= Deleting mirror and vault relationships
+= Deleting mirror and vault relationships with System Manager - ONTAP 9.7 and earlier
+
 :icons: font
 :imagesdir: ../media/
 
 [.lead]
-You can use System Manager to end a mirror and vault relationship between a source and destination volume, and release the Snapshot copies from the source volume.
+You can use ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to end a mirror and vault relationship between a source and destination volume, and release the Snapshot copies from the source volume.
 
 .About this task
 
