--- a/online-help-96-97/task_restoring_volume_vault_relationship.adoc
+++ b/online-help-96-97/task_restoring_volume_vault_relationship.adoc
@@ -4,12 +4,13 @@ sidebar: sidebar
 keywords: system, manager, restore, volume, vault, relationship, online, help, snapshot, copy
 summary: "You can use System Manager to restore Snapshot copies to a source volume or to other volumes if the source data is corrupted and is no longer usable. You can replace the original data with the Snapshot copies in the destination volume."
 ---
-= Restoring a volume in a vault relationship
+= Restoring a volume in a vault relationship with System Manager - ONTAP 9.7 and earlier
+
 :icons: font
 :imagesdir: ../media/
 
 [.lead]
-You can use System Manager to restore Snapshot copies to a source volume or to other volumes if the source data is corrupted and is no longer usable. You can replace the original data with the Snapshot copies in the destination volume.
+You can use ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to restore Snapshot copies to a source volume or to other volumes if the source data is corrupted and is no longer usable. You can replace the original data with the Snapshot copies in the destination volume.
 
 .Before you begin
 
@@ -59,7 +60,7 @@ If you want to change the default name, displayed in the format `destination_SVM
 a|
 An existing volume
 a|
-Select the *Select Volume* option.     
+Select the *Select Volume* option.
 
 You must select a volume other than the source volume, or a read/write volume with some data in it and with a common Snapshot copy.
 
