--- a/online-help-96-97/task_resuming_vault_relationships.adoc
+++ b/online-help-96-97/task_resuming_vault_relationships.adoc
@@ -4,12 +4,12 @@ sidebar: sidebar
 keywords: resume, vault, relationship, online, help, system, manager, data, transfer
 summary: "You can resume a quiesced vault relationship by using System Manager. When you resume the relationship, normal data transfer to the destination FlexVol volume is resumed and all vault activities are restarted."
 ---
-= Resuming a vault relationship
+= Resuming a vault relationship with System Manager - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
 [.lead]
-You can resume a quiesced vault relationship by using System Manager. When you resume the relationship, normal data transfer to the destination FlexVol volume is resumed and all vault activities are restarted.
+You can resume a quiesced vault relationship by using ONTAP System Manager classic (available in ONTAP 9.7 and earlier). When you resume the relationship, normal data transfer to the destination FlexVol volume is resumed and all vault activities are restarted.
 
 .Steps
 
