--- a/online-help-96-97/task_updating_mirror_vault_relationships.adoc
+++ b/online-help-96-97/task_updating_mirror_vault_relationships.adoc
@@ -4,12 +4,12 @@ sidebar: sidebar
 keywords: system, manager, update, mirror, vault, relationship, online, help
 summary: "You can use System Manager to manually initiate an unscheduled incremental update. You might require a manual update to prevent data loss due to an upcoming power outage, scheduled maintenance, or data migration."
 ---
-= Updating mirror and vault relationships
+= Updating mirror and vault relationships with System Manager - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
 [.lead]
-You can use System Manager to manually initiate an unscheduled incremental update. You might require a manual update to prevent data loss due to an upcoming power outage, scheduled maintenance, or data migration.
+You can use ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to manually initiate an unscheduled incremental update. You might require a manual update to prevent data loss due to an upcoming power outage, scheduled maintenance, or data migration.
 
 .Before you begin
 
