--- a/online-help-96-97/concept_autosupport.adoc
+++ b/online-help-96-97/concept_autosupport.adoc
@@ -1,12 +1,12 @@
 ---
 permalink: online-help-96-97/concept_autosupport.html
 sidebar: sidebar
-keywords: autosupport, notification, message, monitor, system, health, storage, email, recipient, severity, view, 
+keywords: autosupport, notification, message, monitor, system, health, storage, email, recipient, severity, view,
 summary: "You can use System Manager to configure AutoSupport notifications that help you to monitor your storage system health."
 ---
-= AutoSupport notifications
+= Manage AutoSupport notifications with System Manager - ONTAP 9.7 and earlier
 
-You can use System Manager to configure AutoSupport notifications that help you to monitor your storage system health.
+You can use ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to configure AutoSupport notifications that help you to monitor your storage system health.
 
 == Set up AutoSupport notifications
 
