--- a/online-help-96-97/concept_flash_pool_statistics.adoc
+++ b/online-help-96-97/concept_flash_pool_statistics.adoc
@@ -4,12 +4,12 @@ sidebar: sidebar
 keywords: flash, pool, statistics, system, manager, ssd, tier, read, write, workload, aggregate, online, help
 summary: "You can use System Manager to view the real-time SSD tier read and write workloads for a selected Flash Pool aggregate."
 ---
-= Flash Pool statistics
+= View Flash Pool statistics with System Manger - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
 [.lead]
-You can use System Manager to view the real-time SSD tier read and write workloads for a selected Flash Pool aggregate.
+You can use ONTAP System Manager classic (available in ONTAP 9.7 and earlier ) to view the real-time SSD tier read and write workloads for a selected Flash Pool aggregate.
 
 == Flash Pool aggregate Statistics window
 
