--- a/online-help-96-97/concept_how_data_ontap_name_service_switch_configuration_works.adoc
+++ b/online-help-96-97/concept_how_data_ontap_name_service_switch_configuration_works.adoc
@@ -4,7 +4,7 @@ sidebar: sidebar
 keywords: ontap, name, service, switch, configuration, works, unix, system, online, help
 summary: "ONTAP stores name service configuration information in a table that is the equivalent of the /etc/nsswitch.conf file on UNIX systems. You must understand the function of the table and how ONTAP uses it so that you can configure it appropriately for your environment."
 ---
-= How ONTAP name service switch configuration works
+= How ONTAP name service switch configuration works in System Manager - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
