--- a/online-help-96-97/concept_storage_virtual_machines.adoc
+++ b/online-help-96-97/concept_storage_virtual_machines.adoc
@@ -4,12 +4,12 @@ sidebar: sidebar
 keywords: system, manager, svm, clister, online, help
 summary: "You can use System Manager to manage the SVMs in your cluster."
 ---
-= Storage Virtual Machines
+= Manage Storage Virtual Machines with System Manager - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
 [.lead]
-You can use System Manager to manage the SVMs in your cluster.
+You can use ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to manage the SVMs in your cluster.
 
 *Related information*
 
