--- a/online-help-96-97/concept_system_alerts.adoc
+++ b/online-help-96-97/concept_system_alerts.adoc
@@ -9,7 +9,7 @@ summary: "You can use System Manager to monitor different parts of a cluster."
 :imagesdir: ../media/
 
 [.lead]
-You can use ONTAP System Manager classic (available in 9.7 and earlier) to monitor different parts of a cluster.
+You can use ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to monitor different parts of a cluster.
 
 == Acknowledge system health alerts
 
