--- a/online-help-96-97/concept_why_you_use_svms.adoc
+++ b/online-help-96-97/concept_why_you_use_svms.adoc
@@ -4,7 +4,7 @@ sidebar: sidebar
 keywords: svm, data, access, nondisruptive, operation, scalability, security, online, help
 summary: "SVMs provide data access to clients regardless of the physical storage or controller, similar to any storage system. SVMs provide benefits such as nondisruptive operations, scalability, security, and unified storage."
 ---
-= Why you use SVMs
+= About SVMs with System Manager - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
