--- a/online-help-96-97/reference_svm_window.adoc
+++ b/online-help-96-97/reference_svm_window.adoc
@@ -4,12 +4,12 @@ sidebar: sidebar
 keywords: storage, virtual, machine, window, svm, online, help, command, button, peer
 summary: "You can use the Storage Virtual Machines window to manage your storage virtual machines (SVMs) and display information about them."
 ---
-= Storage Virtual Machines window
+= Storage Virtual Machines window in System Manager - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
 [.lead]
-You can use the Storage Virtual Machines window to manage your storage virtual machines (SVMs) and display information about them.
+You can use the Storage Virtual Machines window in ONTAP System Manger classic (available in ONTAP 9.7 and earlier) to manage your storage virtual machines (SVMs) and display information about them.
 
 You cannot manage (create, delete, start, or stop) anSVM configured for disaster recovery (DR) by using System Manager. Also, you cannot view the storage objects associated with the SVM configured for disaster recovery in the application interface.
 
