--- a/online-help-96-97/task_starting_svms.adoc
+++ b/online-help-96-97/task_starting_svms.adoc
@@ -4,12 +4,12 @@ sidebar: sidebar
 keywords: system, manager, data, access, start, svm, online, help, storage, virtual, machine
 summary: "You can use System Manager to provide data access from a storage virtual machine (SVM) by starting the SVM."
 ---
-= Starting SVMs
+= Start SVMs with System Manager - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
 [.lead]
-You can use System Manager to provide data access from a storage virtual machine (SVM) by starting the SVM.
+You can use ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to provide data access from a storage virtual machine (SVM) by starting the SVM.
 
 .Steps
 
