--- a/online-help-96-97/task_stopping_svms.adoc
+++ b/online-help-96-97/task_stopping_svms.adoc
@@ -4,12 +4,12 @@ sidebar: sidebar
 keywords: stop, svm, online, help, system, manager, storage, virtual, machine
 summary: "You can use System Manager to stop a storage virtual machine (SVM) if you want to troubleshoot any issue with the SVM, delete the SVM, or stop data access from the SVM."
 ---
-= Stopping SVMs
+= Stop SVMs with System Manager - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
 [.lead]
-You can use System Manager to stop a storage virtual machine (SVM) if you want to troubleshoot any issue with the SVM, delete the SVM, or stop data access from the SVM.
+You can use ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to stop a storage virtual machine (SVM) if you want to troubleshoot any issue with the SVM, delete the SVM, or stop data access from the SVM.
 
 .Before you begin
 
