--- a/online-help-96-97/task_creating_flexclone_files.adoc
+++ b/online-help-96-97/task_creating_flexclone_files.adoc
@@ -4,12 +4,12 @@ sidebar: sidebar
 keywords: create, flexclone, file, parent, test, applications, online, help
 summary: "You can use System Manager to create a FlexClone file, which is a writable copy of a parent file. You can use these copies to test applications."
 ---
-= Create FlexClone files
+= Create FlexClone files with System Manager - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
 [.lead]
-You can use System Manager to create a FlexClone file, which is a writable copy of a parent file. You can use these copies to test applications.
+You can use ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to create a FlexClone file, which is a writable copy of a parent file. You can use these copies to test applications.
 
 .Before you begin
 
