--- a/online-help-96-97/task_creating_flexclone_volumes.adoc
+++ b/online-help-96-97/task_creating_flexclone_volumes.adoc
@@ -4,12 +4,12 @@ sidebar: sidebar
 keywords: create, flexclone, volume, system, manager, online, help
 summary: "You can use System Manager to create a FlexClone volume when you require a writable, point-in-time copy of an existing FlexVol volume. You might want to create a copy of a volume for testing or to provide access to the volume for additional users without giving them access to the production data."
 ---
-= Create FlexClone volumes
+= Create FlexClone volumes with System Manager - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
 [.lead]
-You can use System Manager to create a FlexClone volume when you require a writable, point-in-time copy of an existing FlexVol volume. You might want to create a copy of a volume for testing or to provide access to the volume for additional users without giving them access to the production data.
+You can use ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to create a FlexClone volume when you require a writable, point-in-time copy of an existing FlexVol volume. You might want to create a copy of a volume for testing or to provide access to the volume for additional users without giving them access to the production data.
 
 .Before you begin
 
