--- a/online-help-96-97/task_splitting_flexclone_volume_from_its_parent_volume.adoc
+++ b/online-help-96-97/task_splitting_flexclone_volume_from_its_parent_volume.adoc
@@ -4,12 +4,12 @@ sidebar: sidebar
 keywords: split, flexclone, volume, parent, online, help, disk, space
 summary: "If you want a FlexClone volume to have its own disk space instead of using the disk space of its parent volume, you can split the volume from its parent by using System Manager. After the split, the FlexClone volume becomes a normal FlexVol volume."
 ---
-= Splitting a FlexClone volume from its parent volume
+= Split a FlexClone volume from its parent volume with System Manager - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
 [.lead]
-If you want a FlexClone volume to have its own disk space instead of using the disk space of its parent volume, you can split the volume from its parent by using System Manager. After the split, the FlexClone volume becomes a normal FlexVol volume.
+You can use System Manager classic (available in ONTAP 9.7 and earlier) to split a FlexClone volume from its parent volume if you want a FlexClone volume to have its own disk space instead of using the disk space of its parent volume. After the split, the FlexClone volume becomes a normal FlexVol volume.
 
 .Before you begin
 
